highlight the name the provider - not the kind of the resource

--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -27,9 +27,9 @@ ipam: {}
 #   version: ""    # Optional
 manager.featureGates: {}
 # Configuration for enabling feature gates in diffrent providers
-# manager: # example
+# manager: 
 #   featureGates:
-#     proxmox:
+#     proxmox: # Name of the provider
 #       ClusterTopology: true
 #     core:
 #       ClusterTopology: true
