--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -26,7 +26,7 @@ ipam: {}
 #   namespace: ""  # Optional
 #   version: ""    # Optional
 manager.featureGates: {}
-# Configuration for enabling feature gates in diffrent providers
+# Configuration for enabling feature gates in different providers
 # manager: 
 #   featureGates:
 #     proxmox: # Name of the provider
