--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -28,9 +28,12 @@ metadata:
     "helm.sh/hook-weight": "2"
     {{- end }}
     "argocd.argoproj.io/sync-wave": "2"
-{{- if or $addonVersion $.Values.secretName $.Values.configSecret.name $addon.manager (($addon).configSecret).name }}
+{{- if or $addonVersion $.Values.secretName $.Values.configSecret.name $addon.manager $addon.deployment (($addon).configSecret).name }}
 spec:
 {{- end}}
+{{- if $addon.deployment }}
+  deployment: {{ toYaml $addon.deployment | nindent 4 }}
+{{- end }}
 {{- if $addon.manager }}
   manager:
   {{- if $addon.manager.metrics }}
